@@ -1,6 +1,5 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
-export()
 export(adjR2)
 export(bbox2sp)
 export(buildMS)
@@ -16,6 +15,7 @@ export(plotESDA)
 export(plotHD)
 export(plotMS)
 export(pointsPerLag)
+export(rowMinCpp)
 export(spJitterFinite)
 export(spsannMSSD)
 export(spsannPPL)
@@ -26,9 +26,9 @@ import(Rcpp)
 import(car)
 import(grid)
 import(gstat)
-import(laticeExtra)
 import(lattice)
 import(latticeExtra)
+import(moments)
 import(pbapply)
 import(plyr)
 import(sp)
