@@ -8,11 +8,11 @@
 #' Return the minimum value in each row of a numeric matrix
 #' 
 #' This function returns the minimum value in each row of a numeric matrix.
-#' 
+#'
+#' @param x Numeric matrix with two or more rows and/or columns.
+#' @details
 #' This function is implemented in C++ to speed-up the computation time for
 #' large matrices.
-#' 
-#' @param x Numeric matrix with two or more rows and/or columns.
 #' @return A numeric vector with the minimum value of each row if the matrix.
 #' @author Alessandro Samuel-Rosa \email{alessandrosamuelrosa@@gmail.com}
 #' @seealso \code{\link[matrixStats]{rowMins}}
@@ -20,11 +20,11 @@
 #' @import Rcpp
 #' @export
 #' @examples
-#' 
 #' x <- matrix(rnorm(20), nrow = 5)
 #' rowMinCpp(x)
-#' 
-NULL
+rowMinCpp <- function(x) {
+    .Call('pedometrics_rowMinCpp', PACKAGE = 'pedometrics', x)
+}
 
 .spJitterCpp <- function(x, y, xmax, xmin, ymax, ymin, idx) {
     .Call('pedometrics_spJitterCpp', PACKAGE = 'pedometrics', x, y, xmax, xmin, ymax, ymin, idx)
