@@ -36,8 +36,7 @@ azimuth. The result is a data frame ready to be used to define a object of
 class \code{spsurvey.object}.
 }
 \details{
-\subsection{Type_of_data
-
+\subsection{Type of data}{
 Two types of validation data that can be submitted to function
 \code{gcpDiff()}: those coming from horizontal (positional) validation
 exercises (\code{type = "xy"}), and those coming from vertical validation
@@ -62,9 +61,9 @@ function \code{gcpDiff()} must be of class \code{SpatialPointsDataFrame}.
 They also must have a column named \sQuote{siteID} giving the identification
 of evary case. Again, matching of case IDs is mandatory. However, both
 objects must have a column named \sQuote{z} which contains the values of the
-\sQuote{z} coordinate. Other columns are discarded. }
-\subsection{Data_aggregation
-
+\sQuote{z} coordinate. Other columns are discarded.
+}
+\subsection{Data aggregation}{
 Validation is sometimes performed using cluster or transect sampling. Before
 estimation of error statistics, the data needs to be aggregated by cluster
 or transect. The function \code{gcpDiff()} aggregates validation data of
@@ -73,16 +72,17 @@ can only be properly done if the \sQuote{siteID} column of both objects
 \code{measured} and \code{predicted} provides the identification of
 clusters.  Setting \code{aggregate = TRUE} will return aggregated estimates
 of error statistics. If the data has been aggregated beforehand, the
-parameter \code{aggregate} can be set to \code{FALSE}. }
-\subsection{Case_matching
-
+parameter \code{aggregate} can be set to \code{FALSE}.
+}
+\subsection{Case matching}{
 There are circumstances in which the number of cases in the object
 \code{measured} is larger than that in the object \code{predicted}. The
 function \code{gcpDiff()} compares the number of cases in both objects and
 automatically drops those cases of object \code{measured} that do not match
 the cases of object \code{predicted}. However, case matching can only be
 done if case IDs are exactly the same for both objects. Otherwise, estimated
-error statistics will have no meaning at all. }
+error statistics will have no meaning at all.
+}
 }
 \note{
 Data of \code{type = "xy"} cannot be submitted to cluster aggregation
