@@ -1,28 +1,14 @@
-/*******************************************************************************
-file pedometrics/src/rowMinCpp.cpp
+#include <Rcpp.h>
+using namespace Rcpp;
 
-This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 or 3 of the License
-(at your option).
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-A copy of the GNU General Public License is available at
-http://www.r-project.org/Licenses/
-
-*******************************************************************************/
 //' Return the minimum value in each row of a numeric matrix
 //' 
 //' This function returns the minimum value in each row of a numeric matrix.
-//' 
+//'
+//' @param x Numeric matrix with two or more rows and/or columns.
+//' @details
 //' This function is implemented in C++ to speed-up the computation time for
 //' large matrices.
-//' 
-//' @param x Numeric matrix with two or more rows and/or columns.
 //' @return A numeric vector with the minimum value of each row if the matrix.
 //' @author Alessandro Samuel-Rosa \email{alessandrosamuelrosa@@gmail.com}
 //' @seealso \code{\link[matrixStats]{rowMins}}
@@ -30,16 +16,9 @@ http://www.r-project.org/Licenses/
 //' @import Rcpp
 //' @export
 //' @examples
-//' 
 //' x <- matrix(rnorm(20), nrow = 5)
 //' rowMinCpp(x)
-//' 
-
-#include <Rcpp.h>
-using namespace Rcpp;
-
-// [[Rcpp::export)]]
-
+// [[Rcpp::export]]
 NumericVector rowMinCpp(NumericMatrix x) {
   int nrow = x.nrow(), ncol = x.ncol();
   NumericVector out(nrow), xi(ncol);
